@@ -1,3 +1,12 @@
+2010-01-19  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Chromium build fix.
+
+        * public/WebAccessibilityRole.h:
+        (WebKit::):
+
+        * src/AssertMatchingEnums.cpp:
+
 2010-01-18  Jonathan Dixon  <joth@chromium.org>
 
         Reviewed by Adam Barth.
